# Recto

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  demo.service.yml  pyproject.toml
.github/workflows/: test-mac.yml  test-macos.yml
docs/: MAC-SETUP.md  comms-receiver.md  install.md  integration-gaps.md  macos-setup.md  upgrade-from-nssm.md  v0.4-protocol.md
examples/: sample.service.yaml
phone/RectoMAUIBlazor/: CLAUDE.md  Directory.Packages.props  README.md  Recto.slnx
phone/RectoMAUIBlazor/Recto/Recto/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Recto.csproj
phone/RectoMAUIBlazor/Recto/Recto.Shared/: Recto.Shared.csproj  Routes.razor  _Imports.razor
phone/RectoMAUIBlazor/Recto/Recto.Shared.Tests/: Bip32BtcTests.cs  Bip32Tests.cs  Bip39Tests.cs  BootloaderClientTests.cs  BtcSigningOpsTests.cs  CapabilityJwtBuilderTests.cs  EcdsaSignatureFormatTests.cs  Ed25519ChainSigningOpsTests.cs  EthSigningOpsTests.cs  PinningServiceTests.cs  Recto.Shared.Tests.csproj  Slip10Tests.cs  TotpCodeCalculatorTests.cs  TronSigningOpsTests.cs  WebAuthnAssertionBuilderTests.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Common/: Error.cs  HttpStatus.cs  InternalErrors.cs  Result.cs  Unit.cs  ValidationErrors.cs  ValidationResult.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Common/Decorator/: LoggingDecorator.cs  ValidationDecorator.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Common/Handlers/: ICommandHandler.cs  IQueryHandler.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Extensions/: ServiceCollectionExtensions.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor
phone/RectoMAUIBlazor/Recto/Recto.Shared/Models/: BtcAccount.cs  EdAccount.cs  EnclavePublicKey.cs  EthAccount.cs  PairingState.cs  TronAccount.cs  UserPreferences.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Pages/: Home.razor  Home.razor.css  Settings.razor
phone/RectoMAUIBlazor/Recto/Recto.Shared/Protocol/V04/: AuditLogResponse.cs  CapabilityJwtClaims.cs  PendingRequest.cs  PendingRequestContext.cs  PendingRequestsResponse.cs  PushTokenUpdateRequest.cs  RegisteredPhoneInfo.cs  RegisteredPhonesResponse.cs  RegistrationChallengeResponse.cs  RegistrationRequest.cs  RegistrationResponse.cs  RespondRequest.cs  RespondResponse.cs  RevokeChallengeResponse.cs  RevokeRequest.cs  RevokeResponse.cs  V04Protocol.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/Services/: Bip32.cs  Bip39.cs  Bip39Wordlist.cs  BootloaderClient.cs  BtcSigningOps.cs  CapabilityJwtBuilder.cs  CompositeEnclaveKeyService.cs  EcdsaSignatureFormat.cs  Ed25519ChainSigningOps.cs  EthSigningOps.cs  IBootloaderClient.cs  IBtcSignService.cs  IEd25519ChainSignService.cs  IEnclaveKeyService.cs  IEthSignService.cs  IFormFactor.cs  IPairingStateService.cs  IPinningService.cs  IPushTokenService.cs  ITotpService.cs  ITronSignService.cs  IUserPreferencesService.cs  PinningService.cs  Slip10.cs  TotpCodeCalculator.cs  TronSigningOps.cs  WebAuthnAssertionBuilder.cs
phone/RectoMAUIBlazor/Recto/Recto.Shared/wwwroot/: app.css
phone/RectoMAUIBlazor/Recto/Recto/Components/: _Imports.razor
phone/RectoMAUIBlazor/Recto/Recto/Services/: FormFactor.cs  MauiBtcSignService.cs  MauiEd25519ChainSignService.cs  MauiEthSignService.cs  MauiPairingStateService.cs  MauiTotpService.cs  MauiTronSignService.cs  MauiUserPreferencesService.cs  NoOpPushTokenService.cs  SoftwareEnclaveKeyService.cs
phone/RectoMAUIBlazor/Recto/Recto/wwwroot/: index.html
phone/RectoMAUIBlazor/dev-tools/: README.md  mock-bootloader.py
recto/: __init__.py  __main__.py  _launcher_run.py  _migrate.py  adminui.py  bitcoin.py  cli.py  comms.py  config.py  ethereum.py  healthz.py  joblimit.py  launcher.py  nssm.py  reconcile.py  restart.py  ripple.py  sign_helper.py  solana.py  stellar.py  telemetry.py  tron.py
recto/bootloader/: __init__.py  server.py  sessions.py  state.py
recto/secrets/: __init__.py  base.py  credman.py  dpapi_machine.py  enclave_stub.py  env.py
tests/: conftest.py  test_adminui.py  test_bitcoin.py  test_bootloader_btc.py  test_bootloader_ed.py  test_bootloader_eth.py  test_bootloader_sessions.py  test_bootloader_state.py  test_bootloader_tron.py  test_cli.py  test_comms.py  test_config.py  test_ethereum.py  test_healthz.py  test_joblimit.py  test_launcher.py  test_launcher_comms.py  test_nssm.py  test_reconcile.py  test_restart.py  test_ripple.py  test_secrets_base.py  test_secrets_credman.py  test_secrets_dpapi_machine.py  test_secrets_enclave_stub.py  test_secrets_env.py  test_sign_helper.py  test_solana.py  test_stellar.py  test_telemetry.py  test_tron.py
