[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recto"
version = "0.1.0.dev0"
description = "Modern Windows-service wrapper. Vault-backed secrets, liveness probes, restart-event webhooks, GitOps config."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{name = "Erik Cheatham"}]
keywords = ["nssm", "windows-service", "service-manager", "credentials", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]
aws = ["boto3>=1.34"]
vault = ["hvac>=2.0"]
keychain = []  # macOS uses /usr/bin/security CLI (stdlib only)
secret-service = ["secretstorage>=3.3"]

[project.urls]
Homepage = "https://github.com/darwincommits/Recto"
Repository = "https://github.com/darwincommits/Recto"
Issues = "https://github.com/darwincommits/Recto/issues"

[project.scripts]
recto = "recto.cli:main"

[tool.setuptools.packages.find]
include = ["recto*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
