[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recto"
version = "0.1.0.dev0"
description = "Modern Windows-service wrapper. Vault-backed secrets, liveness probes, restart-event webhooks, GitOps config."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{name = "Erik Cheatham"}]
keywords = ["nssm", "windows-service", "service-manager", "credentials", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]
aws = ["boto3>=1.34"]
vault = ["hvac>=2.0"]
keychain = []  # macOS uses /usr/bin/security CLI (stdlib only)
secret-service = ["secretstorage>=3.3"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]  # `pip install recto[otel]` to enable spec.telemetry tracing
v0_4 = [
    "cryptography>=42",     # Ed25519 sign/verify via the cryptography backend
    "pyjwt[crypto]>=2.8",   # JWT EdDSA encode/verify (pulls cryptography too)
]  # `pip install recto[v0_4]` to enable phone-resident vault (enclave_stub
   # backend, recto.bootloader, recto v0.4 register/revoke CLI). The phone
   # app itself is a separate MAUI Blazor project under /phone; this extra
   # only covers the Recto-side dependencies for the bootloader and the
   # in-process stub used for testing without phone hardware.
ethereum = []
   # `pip install recto[ethereum]` enables the eth_sign credential kind
   # (recto.ethereum module: Keccak-256, EIP-191 / EIP-712 hashing,
   # secp256k1 ECDSA verify + public-key recovery, EIP-55 checksum
   # addresses). The implementation is pure Python stdlib — int /
   # hashlib / no native dependencies — so this extra adds NO new
   # packages to the dep tree. The empty list is intentional: the
   # extra exists purely to gate the import path so consumers without
   # ETH-credential needs can ignore the module. Sign-side primitives
   # (BIP39 mnemonic, BIP32/BIP44 derivation, secp256k1 sign with
   # v-recovery) live phone-side in the MAUI Blazor project, NOT in
   # this Python module — private keys never touch the launcher tier.

[project.urls]
Homepage = "https://github.com/darwincommits/Recto"
Repository = "https://github.com/darwincommits/Recto"
Issues = "https://github.com/darwincommits/Recto/issues"

[project.scripts]
recto = "recto.cli:main"

[tool.setuptools.packages.find]
include = ["recto*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["recto"]
# `_launcher_part2.py` was a transitional stub from v0.1; exclude in
# case it ever resurfaces in a stale checkout.
omit = ["recto/_launcher_part2.py"]

[tool.coverage.report]
# The Win32 ctypes blocks in joblimit.py + secrets/credman.py and the
# OTel-SDK-installed path in telemetry.py are marked `# pragma: no
# cover` inline -- they only execute on Windows (or with the [otel]
# extra installed). The cross-platform Linux suite covers everything
# else; Darwin's smoke run exercises the platform-specific paths.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
